--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -17,58 +17,80 @@ attributes {
     # Attributes: [default: [zombie;generic.maxHealth;1;0.5;/;1], [zombie_pigman;generic.maxHealth;1;0.5;/;1], [zombie_villager;generic.maxHealth;1;0.5;/;1], [husk;generic.maxHealth;1;0.5;/;1], [skeleton;generic.maxHealth;1;0.5], [stray;generic.maxHealth;1;0.5], [wither_skeleton;generic.maxHealth;1;1], [slime;generic.maxHealth;1;0.5], [blaze;generic.maxHealth;1;0.5], [magma_cube;generic.maxHealth;1;0.5], [wither;generic.maxHealth;1;1], [vindication_illager;generic.maxHealth;1;0.5], [evocation_illager;generic.maxHealth;1;1], [zombie;generic.followRange;0;30], [zombie_pigman;generic.followRange;0;30], [zombie_villager;generic.followRange;0;30], [husk;generic.followRange;0;30], [skeleton;generic.followRange;0;30], [stray;generic.followRange;0;30], [wither_skeleton;generic.followRange;0;30], [creeper;generic.followRange;0;30], [spider;generic.followRange;0;30], [slime;generic.followRange;0;30], [witch;generic.followRange;0;30], [blaze;generic.followRange;0;30], [ghast;generic.followRange;0;30], [magma_cube;generic.followRange;0;30], [vindication_illager;generic.followRange;0;30], [evocation_illager;generic.followRange;0;30], [zombie;generic.knockbackResistance;0;0.5], [zombie_pigman;generic.knockbackResistance;0;0.5], [zombie_villager;generic.knockbackResistance;0;0.5], [husk;generic.knockbackResistance;0;0.5], [vindication_illager;generic.knockbackResistance;0;0.5], [creeper;generic.movementSpeed;1;0.5], [slime;generic.movementSpeed;1;0.5], [magma_cube;generic.movementSpeed;1;0.5]]
     S:attributesModifier <
         zombie;generic.maxHealth;1;0.5;/;1
-        zombie_villager;generic.maxHealth;1;0.5;/;1
-        husk;generic.maxHealth;1;0.5;/;1
-        skeleton;generic.maxHealth;1;0.5
-        stray;generic.maxHealth;1;0.5
-        wither_skeleton;generic.maxHealth;0;-5
-        slime;generic.maxHealth;1;0.5
-        blaze;generic.maxHealth;0;-10;/;0
-        vindication_illager;generic.maxHealth;1;0.5
-        evocation_illager;generic.maxHealth;1;1
         zombie;generic.followRange;0;30
-        zombie_pigman;generic.followRange;0;30
-        zombie_villager;generic.followRange;0;30
-        husk;generic.followRange;0;30
-        skeleton;generic.followRange;0;20
-        stray;generic.followRange;0;30
-        wither_skeleton;generic.followRange;0;30
-        creeper;generic.followRange;0;30
-        spider;generic.followRange;0;30
-        slime;generic.followRange;0;30
-        witch;generic.followRange;0;30
-        blaze;generic.followRange;0;30
-        ghast;generic.followRange;0;-40
-        magma_cube;generic.followRange;0;30
-        vindication_illager;generic.followRange;0;30
-        evocation_illager;generic.followRange;0;30
         zombie;generic.knockbackResistance;0;0.5
-        zombie_pigman;generic.knockbackResistance;0;0.5
+        minecraft:zombie;generic.movementSpeed;1;0.3
+
+        zombie_villager;generic.maxHealth;1;0.5;/;1
+        zombie_villager;generic.followRange;0;30
         zombie_villager;generic.knockbackResistance;0;0.5
-        husk;generic.knockbackResistance;0;0.5
-        vindication_illager;generic.knockbackResistance;0;0.5
-        slime;generic.movementSpeed;1;0.5
-        magma_cube;generic.movementSpeed;1;0.01
-        nethercraft:dark_zombie;generic.maxHealth;0;-35;/;0
-        nethercraft:bloody_zombie;generic.maxHealth;0;-25;/;0
-        primitivemobs:blazing_juggernaut;generic.maxHealth;0;-10;/;0
-        primitivemobs:flame_spewer;generic.maxHealth;0;-15;/;0
-        nethercraft:camouflage_spider;generic.maxHealth;0;-25;/;0
-        primitivemobs:festive_creeper;generic.maxHealth;0;-10;/;0
-        ghast;generic.maxHealth;0;-9;/;0
-        primitivemobs:blazing_juggernaut;generic.attackDamage;0;1
-        primitivemobs:blazing_juggernaut;generic.followRange;0;-15
-        primitivemobs:blazing_juggernaut;generic.knockbackResistance;0;1.0
-        nethercraft:bloody_zombie;generic.movementSpeed;1;0.3
-        nethercraft:dark_zombie;generic.movementSpeed;1;0.2
+
+        minecraft:zombie_pigman;generic.followRange;0;30
+        minecraft:zombie_pigman;generic.knockbackResistance;0;0.5
         minecraft:zombie_pigman;generic.movementSpeed;1;0.1
         minecraft:zombie_pigman;generic.attackDamage;0;-5
 
-        minecraft:zombie;generic.movementSpeed;1;0.3
+        husk;generic.maxHealth;1;0.5;/;1
+        husk;generic.followRange;0;30
+        husk;generic.knockbackResistance;0;0.5
+
+        skeleton;generic.maxHealth;1;0.5
+        skeleton;generic.followRange;0;20
+
+        stray;generic.maxHealth;1;0.5
+        stray;generic.followRange;0;30
+
+        wither_skeleton;generic.maxHealth;0;-5
+        wither_skeleton;generic.followRange;0;30
+
+        slime;generic.maxHealth;1;0.5
+        slime;generic.followRange;0;30
+        slime;generic.movementSpeed;1;0.5
+
+        blaze;generic.maxHealth;0;-10;/;0
+        blaze;generic.followRange;0;30
         blaze;generic.movementSpeed;1;0.1
-        
+
+        vindication_illager;generic.maxHealth;1;0.5
+        vindication_illager;generic.followRange;0;30
+        vindication_illager;generic.knockbackResistance;0;0.5
+
+        evocation_illager;generic.maxHealth;1;1
+        evocation_illager;generic.followRange;0;30
+
+        creeper;generic.followRange;0;30
+
+        spider;generic.followRange;0;30
+
+        witch;generic.followRange;0;30
+
+        ghast;generic.maxHealth;0;-9
+        ghast;generic.followRange;0;-40
+
+        magma_cube;generic.followRange;0;30
+        magma_cube;generic.movementSpeed;1;0.01
+
+        nethercraft:dark_zombie;generic.maxHealth;0;-35
+        nethercraft:dark_zombie;generic.movementSpeed;1;0.1
+        nethercraft:dark_zombie;generic.attackDamage;0;-1;/;0
+
+        nethercraft:bloody_zombie;generic.maxHealth;0;-25
+        nethercraft:bloody_zombie;generic.attackDamage;0;-2;/;0
+        nethercraft:bloody_zombie;generic.movementSpeed;1;0.3
+
+        nethercraft:camouflage_spider;generic.maxHealth;0;-25
+
+        primitivemobs:blazing_juggernaut;generic.maxHealth;0;-10
+        primitivemobs:blazing_juggernaut;generic.attackDamage;0;1
+        primitivemobs:blazing_juggernaut;generic.followRange;0;-15
+        primitivemobs:blazing_juggernaut;generic.knockbackResistance;0;1.0
+
+        primitivemobs:flame_spewer;generic.maxHealth;0;-15
+
+        primitivemobs:festive_creeper;generic.maxHealth;0;-10
+
         eyesinthedarkness:eyes;generic.movementSpeed;1;1.0
-        eyesinthedarkness:eyes;generic.followRange;0;40     
+        eyesinthedarkness:eyes;generic.followRange;0;40
     >
 }
 
